# rene

./: README.md  pyproject.toml
docs/: index.html
docs/static/css/: index.css
docs/static/js/: index.js
examples/: test_format.py
examples/create_mosaic_website/: webmosaic.py
examples/create_video_cool/: create_video_cool.py
examples/create_video_splits/: README.md  create_video_splits.py
examples/create_video_splits/cfgs/: video_with_splits.yml  video_with_splits_single.yml
examples/mosaic/: README.md  create_mosaic.py
examples/mosaic/cfgs/: mosaic.yml  mosaic_2x2.yml  mosaic_2x3.yml  mosaic_2x4.yml
examples/qualitative_export/: README.md  qualitative_export.py
html/: index.html
rene/: __init__.py  dataset.py  main.py
rene/cli/: __init__.py  benchmark.py  copy_calibration.py  download.py  filter.py  png_to_jpg.py  show.py  split.py  zipp.py
rene/utils/: __init__.py  loaders.py  stages.py
